--- a/src/app/pages/home/home.css
+++ b/src/app/pages/home/home.css
@@ -1,5 +1,5 @@
-.list-container{
-    /* margin-top: 20rem; */
+.list-container {
+  /* margin-top: 20rem; */
 }
 .transition-3ms {
   transition: all 0.3s ease;
@@ -17,3 +17,37 @@
   box-sizing: border-box;
   padding-right: 1rem;
 } */
+
+::ng-deep .custom-snackbar {
+  z-index: 20000000000000 !important;
+}
+
+::ng-deep.cdk-overlay-container {
+  z-index: 20000000000000 !important;
+}
+
+::ng-deep .custom-snackbar {
+  background-color: #ffffff !important;
+  color: #333 !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  /* border: 1px solid #ccc; */
+  font-weight: 500;
+}
+
+::ng-deep .mdc-snackbar__surface {
+  background-color: #ffff !important;
+  color: #333 !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  /* border: 1px solid #ccc; */
+  font-weight: 500;
+}
+::ng-deep .mat-mdc-snackbar-surface {
+  background-color: #ffff !important;
+  color: #333 !important;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
+  /* border: 1px solid #ccc; */
+  font-weight: 500;
+}
+::ng-deep .mdc-button__label {
+  color: var(--airbnb-red) !important;
+}
