--- a/src/app/components/mainswiper/mainswiper.html
+++ b/src/app/components/mainswiper/mainswiper.html
@@ -48,21 +48,40 @@
           "1280": {"slidesPerView": 7, "spaceBetween": 16}
         }'
   >
-    <swiper-slide
-      *ngFor="let property of properties; trackBy: trackByPropertyId"
-    >
-      <app-slider-card
-        (cardClick)="onCardClicked($event)"
-        (wishlistClick)="onWishListClick($event)"
-        [propertyId]="property.id"
-        title="{{property.title}}"
-        imageUrl="{{getPropertyImage(property)}}"
-        [price]="property.pricePerNight"
-        description="{{property.description}}"
-        [rating]="property.averageRating"
-        [isFavourite]="property.isFavourite ?? false"
-        [reviewCount]="property.reviewCount"
-      ></app-slider-card>
-    </swiper-slide>
+    <ng-container *ngIf="!isLoading; else shimmerSlides">
+      <swiper-slide
+        *ngFor="let property of properties; trackBy: trackByPropertyId"
+      >
+        <app-slider-card
+          (cardClick)="onCardClicked($event)"
+          (wishlistClick)="onWishListClick($event)"
+          [propertyId]="property.id"
+          [title]="property.title"
+          [imageUrl]="getPropertyImage(property)"
+          [price]="property.pricePerNight"
+          [description]="property.description"
+          [rating]="property.averageRating"
+          [isFavourite]="property.isFavourite ?? false"
+          [reviewCount]="property.reviewCount"
+        ></app-slider-card>
+      </swiper-slide>
+    </ng-container>
+
+    <ng-template #shimmerSlides>
+      <swiper-slide *ngFor="let n of [1, 2, 3, 4, 5, 6, 7]">
+        <div class="shimmer-card p-2 rounded-2">
+          <div class="shimmer shimmer-img rounded-4 mb-2 ratio-1x1 w-100"></div>
+
+          <div class="shimmer shimmer-line mb-1 w-75"></div>
+
+          <div class="shimmer shimmer-line mb-1 w-50"></div>
+
+          <div class="d-flex justify-content-between mt-2">
+            <div class="shimmer shimmer-line w-25"></div>
+            <div class="shimmer shimmer-line w-25"></div>
+          </div>
+        </div>
+      </swiper-slide>
+    </ng-template>
   </swiper-container>
 </div>
