--- a/src/app/pages/register/register.css
+++ b/src/app/pages/register/register.css
@@ -2,7 +2,7 @@
   position: fixed;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.6);
-  z-index: 10000000;
+  z-index: 10000;
   display: flex;
   justify-content: center;
   align-items: center;
