--- a/src/app/layout/main-layout/main-layout.html
+++ b/src/app/layout/main-layout/main-layout.html
@@ -2,6 +2,7 @@
   <app-header></app-header>
   <!-- <app-host-properties> </app-host-properties> -->
   <main
+  class="bg"
     [ngClass]="{
     'mt': !(isMessagesRoute || isSecondRoute),
     'nomt':isSecondRoute
