--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -112,9 +112,20 @@
 >
 </app-wish-list-modal>
 
-<app-property-swiper
+<!-- <app-property-swiper
   [isLoading]="isLoading"
   (wishlistIconClick)="onWishlistClick($event)"
   (propertyClicked)="onPropertyClick($event)"
   [properties]="properties"
-></app-property-swiper>
+></app-property-swiper> -->
+
+<div *ngFor="let section of sectionProperties">
+  <app-property-swiper
+    [title]="section.title"
+    [slidesPerView]="section.slidesPerView"
+    *ngIf="!section.isLoading"
+    [properties]="section.properties"
+    (propertyClicked)="onPropertyClick($event)"
+    (wishlistIconClick)="onWishlistClick($event)"
+  ></app-property-swiper>
+</div>
