--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,7 +1,7 @@
 .airbnb-header {
   background: linear-gradient(to bottom, var(--bg-color), var(--head));
   border-bottom: 1px solid var(--border-color);
-  box-shadow: 0 1px 4px var(--shadow-color);
+  box-shadow:inset 0 1px 3px var(--shadow-color);
   position: fixed;
   top: 0;
   left: 0;
