Add Delete Image To Update

--- a/src/app/components/host-header/host-header.html
+++ b/src/app/components/host-header/host-header.html
@@ -24,7 +24,7 @@
       </li>
       <li>
         <a
-          routerLink="/availability"
+          routerLink="/hostsettings/availability"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: true }"
           >Calendar</a
