--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -123,7 +123,7 @@
   <app-property-swiper
     [title]="section.title"
     [slidesPerView]="section.slidesPerView"
-    *ngIf="!section.isLoading"
+    [isLoading]="section.isLoading"
     [properties]="section.properties"
     (propertyClicked)="onPropertyClick($event)"
     (wishlistIconClick)="onWishlistClick($event)"
