--- a/src/app/pages/filtered-properties/filtered-properties.css
+++ b/src/app/pages/filtered-properties/filtered-properties.css
@@ -23,11 +23,11 @@
   height: 80vh;
   max-height: fit-content;
   position: sticky;
-  top: 0rem;
+  top: 8rem;
   overflow-y: auto;
   /* box-shadow: -2px 0 5px rgba(0,0,0,0.1); */
   z-index: 1;
-  position: relative;
+  /* position: relative; */
 }
 
 /* Map loading overlay */
