--- a/src/app/components/chat-box/chat-box.css
+++ b/src/app/components/chat-box/chat-box.css
@@ -92,7 +92,9 @@
 }
 
 @keyframes loading-bounce {
-  0%, 80%, 100% {
+  0%,
+  80%,
+  100% {
     transform: scale(0.8);
     opacity: 0.5;
   }
@@ -175,8 +177,18 @@
   color: #222222;
   border-top-left-radius: 6px;
 }
+.other-person-bubble {
+  background-color: #f7f7f7;
+  color: #222222;
+  border-top-left-radius: 6px;
+}
 
 .user-bubble {
+  background-color: #222222;
+  color: #ffffff;
+  border-top-right-radius: 6px;
+}
+.current-user-bubble {
   background-color: #222222;
   color: #ffffff;
   border-top-right-radius: 6px;
