--- a/src/app/components/chat-box/chat-box.html
+++ b/src/app/components/chat-box/chat-box.html
@@ -28,7 +28,9 @@
       <span class="loading-text">Loading messages...</span>
     </div>
 
-    <ng-container *ngFor="let item of chatItems; let i = index; trackBy: trackById">
+    <ng-container
+      *ngFor="let item of chatItems; let i = index; trackBy: trackById"
+    >
       <!-- Date separator -->
       <div *ngIf="item.type === 'date'" class="date-separator">
         <span class="date-label">{{item.label}} </span>
@@ -49,24 +51,24 @@
       <!-- Message -->
       <div
         *ngIf="item.type === 'message'"
-        [ngClass]="{'message-right': item.sender === 'user', 'message-left': item.sender === 'host'}"
+        [ngClass]="{'message-right': item.isCurrentUser, 'message-left': !item.isCurrentUser}"
       >
         <!-- Host info (only for host messages) -->
-        <div *ngIf="item.sender === 'host'" class="host-info">
+        <div *ngIf="!item.isCurrentUser" class="host-info">
           <img
             [src]="hostProfileImage"
             class="profile-img"
             alt="Host"
             style="width: 24px; height: 24px;"
           />
-          <span class="host-label">{{hostName}} · Host</span>
+          <span class="host-label">{{hostName}}</span>
           <span class="timestamp">{{item.timestamp}}</span>
         </div>
 
         <!-- Message bubble -->
         <div
           class="message-bubble"
-          [ngClass]="{'user-bubble': item.sender === 'user', 'host-bubble': item.sender === 'host'}"
+          [ngClass]="{'current-user-bubble': item.isCurrentUser, 'other-person-bubble': !item.isCurrentUser}"
         >
           <span [innerHTML]="item.content"></span>
 
@@ -75,7 +77,7 @@
             class="emoji-button"
             (click)="toggleEmojiPicker(i, $event)"
             type="button"
-            [ngStyle]="item.sender === 'host' ? {'left': '105%'} : {'right': '105%'}"
+            [ngStyle]="!item.isCurrentUser ? {'left': '105%'} : {'right': '105%'}"
           >
             😊
 
@@ -84,7 +86,7 @@
               *ngIf="showEmojiPicker === i"
               class="emoji-picker"
               (click)="$event.stopPropagation()"
-              [ngStyle]="item.sender === 'host' ? {'left': '110%'} : {'right': '110%'}"
+              [ngStyle]="!item.isCurrentUser ? {'left': '110%'} : {'right': '110%'}"
             >
               <button
                 *ngFor="let emoji of emojiOptions"
@@ -101,15 +103,15 @@
           <div
             *ngIf="item.reaction"
             class="message-reaction"
-            [ngStyle]="item.sender === 'host' ? {'right': '8px'} : {'left': '8px'}"
-            [ngClass]="item.sender === 'host' ? 'reaction-host' : 'reaction-user'"
+            [ngStyle]="!item.isCurrentUser ? {'right': '8px'} : {'left': '8px'}"
+            [ngClass]="!item.isCurrentUser ? 'reaction-host' : 'reaction-user'"
           >
             {{item.reaction}}
           </div>
         </div>
 
         <!-- Timestamp for user messages -->
-        <div *ngIf="item.sender === 'user'" class="user-timestamp">
+        <div *ngIf="item.isCurrentUser" class="user-timestamp">
           <span class="timestamp">{{item.timestamp}}</span>
           <span *ngIf="item.readBy" class="read-status"
             >Read by {{item.readBy}}</span
